--- a/desafio_tabela_3.html
+++ b/desafio_tabela_3.html
@@ -7,21 +7,25 @@
     <title>tabelinha</title>
     <style>
         body {
-            background-color: rgb(125, 125, 125);
+            background-color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
         }
         table {
             border-collapse: collapse;
             text-align: center;
             margin: auto;
+            margin-left: 35px;
         }
         th, td {
-            border: 1px solid white;
-            padding: 20px;
+            border: 2px solid rgb(0, 0, 0);
+            padding: 10px;
+            padding-left: 40px;
             margin: 50px;
         }
 
         th {
-            background-color: black;
+            background-color:rgb(103, 103, 103);
             color: white;
 
         }
@@ -29,59 +33,61 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th rowspan="2">Área</th>
-            <th rowspan="2">Disciplinas</th>
-            <th colspan="2">Notas</th>
-            <th rowspan="2">Media</th>
+        <thead>
+            <tr>
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="col">Media</th>
+                <tr>
+                    <th scope="col">nota1</th>
+                    <th scope="col">nota2</th>
+                </tr>
+        </thead>
         </tr>
         <tr>
-            <td>nota1</td>
-            <td>nota2</td>
-        </tr>
-        <tr>
-            <td rowspan="4">exatas</td>
-            <td>matematica</td>
+            <td rowspan="4" scope="rowgroup">exatas</td>
+            <td scope="row">matemática</td>
             <td>0.0</td>
             <td>0.0</td>
             <td>0.0</td>
         </tr>
         <tr>     
-            <td>Física</td>
+            <td scope="row">Física</td>
             <td>0.0</td>
             <td>0.0</td>
             <td>0.0</td>
         </tr>
         <tr>
-            <td>Química</td>
+            <td scope="row">Química</td>
             <td>0.0</td>
             <td>0.0</td>
             <td>0.0</td>
         </tr>
         <tr>
-            <td>Biologia</td>
+            <td scope="row">Biologia</td>
             <td>0.0</td>
             <td>0.0</td>
             <td>0.0</td>
         </tr>
         <tr>
-            <th colspan="4">Média de Exatas</th>
+            <th colspan="4" scope="row">Média de Exatas</th>
             <td>0.0</td>
         </tr>
-        <td rowspan="2">Humanas</td>
-        <td>Geografia</td>
-        <td>0.0</td>
-        <td>0.0</td>
-        <td>0.0</td>
+        <td rowspan="2" scope="rowgroup">Humanas</td>
+            <td scope="row">Geografia</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
         </tr>
         <tr>
-            <td>História</td>
+            <td scope="row">História</td>
             <td>0.0</td>
             <td>0.0</td>
             <td>0.0</td>
         </tr>
         <tr class="">
-            <th colspan="4">Média de Humanas</th>
+            <th colspan="4" scope="row">Média de Humanas</th>
             <td>0.0</td>
         </tr>
     </table>
